FIX timer was too big: make it responsive w/out overlapping button

--- a/src/components/play-exercice/Timer.css
+++ b/src/components/play-exercice/Timer.css
@@ -2,9 +2,18 @@
 
 .timer {
     position: relative;
-    height: 300px;
-    width: 300px;
+    /* height: 300px;
+    width: 300px; */
 }
+
+.squarred {
+    width:calc(100vh - 350px);
+    max-width:min(100vw, 300px);
+    max-height:min(100vw, 300px);
+    margin:0 auto;
+    flex:1;
+    overflow:hidden;
+  }
 
 /* Removes SVG styling that would hide the time label */
 
@@ -16,8 +25,8 @@
 .time-label {
     position: absolute;
     /* Size should match the parent container */
-    width: 300px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
     /* Keep the label aligned to the top */
     top: 0;
     /* Create a flexible box that centers content vertically and horizontally */
@@ -25,7 +34,7 @@
     align-items: center;
     justify-content: center;
     /* Sort of an arbitrary number; adjust to your liking */
-    font-size: 72px;
+    font-size: min(25.5vw, 18.5vh);
     color: var(--ion-color-primary);
 }
 
